# IBL

./: .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  README.rst  Thwaites V3.vpp  analytical_thwaites_wedge.py  code_of_conduct.rst  contributing.rst  developer.rst  flatplate_mild_pressure_gradient.py  flatplate_transition.py  pyBL.py  pyBL2.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  xfoil_comparison_lam.py  xfoil_turb.py
.github/workflows/: tests.yml
docs/: .buildinfo  genindex.html  index.html  index.md  objects.inv  py-modindex.html  release_steps.md  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/pyBL/: head_method.html  ibl_method.html  initial_condition.html  stanford_olympics.html
docs/_sources/api/: modules.rst.txt
docs/_static/: documentation_options.js
docs/api/: modules.html
docs/api/_autosummary/: ibl.analytic.Analytic2dSimilarityIncompressible.html  ibl.analytic.Blasius.html  ibl.analytic.FalknerSkan.html  ibl.analytic.html  ibl.head_method.HeadMethod.html  ibl.head_method.html  ibl.html  ibl.ibl_method.IBLMethod.html  ibl.ibl_method.IntegrationResult.html  ibl.ibl_method.TermEvent.html  ibl.ibl_method.TermReason.html  ibl.ibl_method.html  ibl.initial_condition.FalknerSkanStagCondition.html  ibl.initial_condition.InitialCondition.html  ibl.initial_condition.ManualCondition.html  ibl.initial_condition.html  ibl.reference.StanfordOlympics1968.html  ibl.reference.StanfordOlympics1968SmoothVel.html  ibl.reference.StanfordOlympics1968StationData.html  ibl.reference.XFoilAirfoilData.html  ibl.reference.XFoilReader.html  ibl.reference.XFoilWakeData.html  ibl.reference.html  ibl.skin_friction.html  (+43 more)
docs/developers/: code_of_conduct.html  contributing.html  index.html
docs/examples/: index.html
docs/license/: index.html  license.html
docs/project_info/: release_steps.md
docs/source/: conf.py  license.rst
examples/: analytical_thwaites_wedge.py  falkner_skan.py  flatplate_mild_pressure_gradient.py  flatplate_transition.py  head_case1100_comparison.py  head_case1200_comparison.py  head_case1300_comparison.py  head_case_1300_comparison.py  skin_friction_comparison.py  thwaites_blasius_comparison.py  thwaites_falkner_skan_stagnation_flow_comparison.py  thwaites_falkner_skan_wedge_flow_comparison.py  thwaites_function_comparisons.py  xfoil_comparison.py  xfoil_comparison_forced.py  xfoil_comparison_lam.py  xfoil_interface.py  xfoil_laminar_comparison.py  xfoil_turb.py  xfoil_turbulent_comparison.py
examples/data/: xfoil_0003_inviscid_dump.txt  xfoil_0012_inviscid_dump.txt  xfoil_0012_turbulent_dump.txt  xfoil_natural_dump.txt
examples/falkner_skan/: falkner_skan_thwaites_functions_comparisons.py
examples/figures_compare/: derivatives.tex  flatplate_mapg.tex  flatplate_mpg_raw_error.tex  flatplate_mpg_smooth_error.tex  flatplate_mpg_smoothder_error.tex  fp_mapg_velocities.tex  full_xfoil.tex  full_xfoil_error.tex  full_xfoil_forced.tex  full_xfoil_forced_error.tex  full_xfoil_lam_michel.tex  full_xfoil_michel.tex  thwaites_fs_angle.tex  thwaites_fs_angle_error.tex  thwaites_fs_angle_linear_error.tex  thwaites_fs_fp.tex  thwaites_fs_fp_error.tex  thwaites_fs_fp_linear_error.tex  thwaites_fs_stag.tex  thwaites_fs_stag_error.tex  thwaites_fs_stag_linear_error.tex  transpiration.tex  turb_sep_vars.tex  xfoil_lam.tex  xfoil_lam_error.tex  xfoil_lam_uezoom.tex  xfoil_turb.tex  xfoil_turb_error.tex  xfoil_u_e_dist.tex
examples/laminar/: .pylintrc  thwaites_blasius_comparison.py  thwaites_falkner_skan_stagnation_flow_comparison.py  thwaites_falkner_skan_wedge_flow_comparison.py  thwaites_function_comparisons.py
examples/turbulent/: head_case1100_comparison.py  head_case1200_comparison.py  head_case1300_comparison.py  skin_friction_comparison.py
examples/xfoil/: xfoil_laminar_comparison.py  xfoil_turbulent_comparison.py
ibl/: __init__.py  analytic.py  blasius.py  dense_output_ppoly.py  falkner_skan.py  head_method.py  ibl_method.py  initial_condition.py  pyBL.py  pybl.py  reference.py  skin_friction.py  stanford_olympics.py  thwaites_method.py  typing.py  xfoil_reader.py
ibl/analytic/: __init__.py  _analytic_2d_base.py  _blasius.py  _falkner_skan.py
ibl/reference/: __init__.py  _stanford_1968.py  _stanford_1968_station.py  _xfoil_reader.py
ibl/src/: pybl.py
project_info/: development_commands.txt  doc_build.txt  getting_started.md  release_steps.md
project_info/old_info/: Thwaites V3.vpp.bak_000f  development_commands.txt
pyBL/: .pylintrc  __init__.py  all_figures.py  analytical_thwaites_wedge.py  blasius.py  blasius_solution.py  dense_output_ppoly.py  falkner_skan.py  falkner_skan_solution.py  flatplate_transition.py  head_method.py  heads_method.py  ibl_base.py  ibl_method.py  initial_condition.py  plot_BL_params.py  pyBL.py  pyBL_base.py  skin_friction.py  stanford_olympics.py  thwaites_method.py  xfoil_comparison.py  xfoil_comparison_forced.py  xfoil_reader.py
sphinx/: Makefile  make.bat  requirements.txt
sphinx/source/: conf.py  index.rst
stanford_olympics/1968/: case 1100.txt  case 1200.txt  case 1300.txt
tests/: _thwaites_linear_analytic.py  ibl_base_test.py  rk_dense_output_ppoly_test.py  test_analytic_falkner_skan.py  test_blasius.py  test_blasius_solution.py  test_falkner_skan.py  test_falkner_skan_solution.py  test_head_method.py  test_ibl_base.py  test_ibl_method.py  test_initial_condition.py  test_rk_dense_output_ppoly.py  test_skin_friction.py  test_stanford_olympics.py  test_thwaites_fits.py  test_thwaites_linear_model.py  test_thwaites_method.py  test_thwaites_nonlinear_model.py  test_thwwaites_fits.py  test_xfoil_reader.py  thwaites_method_test.py  thwaites_test.py
tests/Edland Figures/: falkner_skan_analysis.py  figure_102_to_103.py  figure_301_to_303.py  figure_304_to_306.py  figure_307_to_309.py  figure_310_to_316.py  figure_317_to_319.py  figure_320_to_321.py  figure_322_to_323.py  figure_324_to_325.py  xfoil_interface.py  xfoil_laminar_dump.txt
tests/data/: xfoil_inviscid_dump.txt  xfoil_viscous_dump.txt
venvs/: info.txt
(+111 files in other folders)
