# Top level build settings
[build-system]
requires = [
    "setuptools>=64.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


# See this for settings: https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "IBL"
version = "0.6.dev"
authors = [
    {name = "David D. Marshall", email = "ddmarshall@gmail.com"},
    {name = "Malachi Edland"},
]
description = "Integral boundary layer method implementations for use with inviscid flow solvers."
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "license.rst"}
keywords = [
    "Integral Boundary Layer Methods",
    "Aerodynamics",
    "Viscous Flow"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.8"
]

[project.urls]
documentation = "https://ddmarshall.github.io/IBL/index.html"
repository = "https://github.com/ddmarshall/IBL"

[project.optional-dependencies]
examples = ["matplotlib>=3.5"]
tests = [
    "pylint>=2.15",
    "mypy>=0.991",
    "pycodestyle>=2.10",
    "coverage[toml]>=7.2",
    "tox>=4.4",
    "sphinx-rtd-theme>=0.4.3"
]


# Setuptools settings
[tool.setuptools]
include-package-data = true
packages = ["ibl"]

# [tool.setuptools.packages.find]
# where = ["ibl"]

[tool.setuptools.package-data]
stanford_olympics = ["*.txt"]


# Mypy settings
[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
files = [
    "ibl",
    "examples",
    "tests"
]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "matplotlib.*"
]
ignore_missing_imports = true


# Pylint settings
[tool.pylint.basic]
good-names-rgxs = ["^[_a-z][_a-z0-9]?$"]

[tool.pylint.design]
max-args = 10
max-attributes = 20
max-locals = 20
max-public-methods = 30
min-public-methods = 1

[tool.pylint.format]
max-line-length = 79

[tool.pylint.similarities]
min-similarity-lines = 12


# Pyright settings
[tool.pyright]
include=[
    "ibl",
    "examples",
    "tests"
]
reportInvalidTypeForm = false


# Coverage.py settings
[tool.coverage.run]
branch = true
command_line = "-m unittest discover --start-directory tests"
